--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,19 +24,19 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  google_fonts: ^2.0.0
-  url_launcher: ^6.0.2
-  responsive_builder: ^0.1.2
-  carousel_slider: ^3.0.0
-  animated_text_kit: ^3.1.2
-  font_awesome_flutter: ^9.1.0
-  universal_html: ^2.0.4
-  http: ^0.13.1
-  flutter_html: any
+  google_fonts: ^2.3.1
+  url_launcher: ^6.0.20
+  responsive_builder: ^0.4.2
+  carousel_slider: ^4.0.0
+  animated_text_kit: ^4.2.0
+  font_awesome_flutter: ^9.2.0
+  universal_html: ^2.0.8
+  http: ^0.13.4
+  flutter_html: ^2.2.1
   url_strategy: ^0.2.0
-  provider: ^5.0.0
-  shared_preferences: ^2.0.6
-  flip_card: ^0.5.0
+  provider: ^6.0.2
+  shared_preferences: ^2.0.13
+  flip_card: ^0.6.0
 
   mailto: ^2.0.0
 
